--- a/src/styles/_Showcase.scss
+++ b/src/styles/_Showcase.scss
@@ -1,17 +1,16 @@
 #showcase {
+  position: relative;
+  
   img {
     width: 100%;
   }
   .position-relative {
     width: 100%;
   }
-  h5 {
-    color: $primaryColor;
-  }
   .showcase__text {
     background-color: #eee;
-    padding-top: 25%;
-    margin-top: -25%;
+    padding-bottom: 25%;
+    margin-bottom: -25%;
     p {
       max-width: 300px;
     }
